--- a/builds/development/views/specs.html
+++ b/builds/development/views/specs.html
@@ -11,8 +11,8 @@
 
 	    <h2>Select Customizations</h2>
 
-	    Shaft Type: <select name="shaftType" ng-model="shaftType" ng-required="true">
-	      <option ng-repeat="attribute in configValues.shaftTypeValues" value="{{attribute.value}}" ng-selected="{{attribute.uniqueID == shaftType}}">{{attribute.value}}</option>
+	    Shaft Type: <select name="shaftType" ng-model="model.shaftType" ng-required="true">
+	      <option ng-repeat="attribute in configValues.shaftTypeValues" value="{{attribute.value}}" ng-selected="{{attribute.value == shaftType}}">{{attribute.value}}</option>
 		</select>
 		
 	    <p 
@@ -21,8 +21,8 @@
 
 	    <br/>
 
-	    Shaft Flex: <select name="shaftFlex" ng-model="shaftFlex" ng-required="true">
-	      <option ng-repeat="attribute in configValues.shaftFlexValues" value="{{attribute.value}}">{{attribute.value}}</option>
+	    Shaft Flex: <select name="shaftFlex" ng-model="model.shaftFlex" ng-required="true">
+	      <option ng-repeat="attribute in configValues.shaftFlexValues" value="{{attribute.value}}" ng-selected="{{attribute.value == shaftFlex}}">{{attribute.value}}</option>
 		</select>
 		
 	    <p 
@@ -31,8 +31,8 @@
 
 	    <br/>
 
-	    Lie Angle: <select name="lieAngle" ng-model="lieAngle" ng-required="true">
-	      <option ng-repeat="attribute in configValues.lieAngleValues" value="{{attribute.value}}">{{attribute.value}}</option>
+	    Lie Angle: <select name="lieAngle" ng-model="model.lieAngle" ng-required="true">
+	      <option ng-repeat="attribute in configValues.lieAngleValues" value="{{attribute.value}}" ng-selected="{{attribute.value == lieAngle}}">{{attribute.value}}</option>
 		</select>
 		
 	    <p 
@@ -41,8 +41,8 @@
 
 	    <br/>
 
-	    Shaft Length: <select name="shaftLength" ng-model="shaftLength" ng-required="true">
-	      <option ng-repeat="attribute in configValues.shaftLengthValues" value="{{attribute.value}}">{{attribute.value}}</option>
+	    Shaft Length: <select name="shaftLength" ng-model="model.shaftLength" ng-required="true">
+	      <option ng-repeat="attribute in configValues.shaftLengthValues" value="{{attribute.value}}" ng-selected="{{attribute.value == shaftLength}}">{{attribute.value}}</option>
 		</select>
 		
 	    <p 
@@ -51,8 +51,8 @@
 
 	    <br/>
 
-	    Grip: <select name="gripType" ng-model="gripType" ng-required="true">
-	      <option ng-repeat="attribute in configValues.gripValues" value="{{attribute.value}}" ng-selected="{{attribute.uniqueID == gripType}}">{{attribute.value}}</option>
+	    Grip: <select name="gripType" ng-model="model.gripType" ng-required="true">
+	      <option ng-repeat="attribute in configValues.gripValues" value="{{attribute.value}}" ng-selected="{{attribute.value == gripType}}">{{attribute.value}}</option>
 		</select>
 		
 	    <p 
@@ -61,8 +61,8 @@
 
 	     <br/>
 
-	     Grip Size: <select name="gripSize" ng-model="gripSize" ng-required="true">
-	      <option ng-repeat="attribute in configValues.gripSizeValues" value="{{attribute.value}}">{{attribute.value}}</option>
+	     Grip Size: <select name="gripSize" ng-model="model.gripSize" ng-required="true">
+	      <option ng-repeat="attribute in configValues.gripSizeValues" value="{{attribute.value}}" ng-selected="{{attribute.value == gripSize}}">{{attribute.value}}</option>
 		</select>
 		
 	    <p 
@@ -73,14 +73,14 @@
 
 	    Clubs:
 	    <label ng-repeat="club in configValues.clubsValues">
-	        <input type="checkbox" ng-model="clubs" value="{{club.value}}"> {{club.value}} 
+	        <input type="checkbox" ng-model="model.clubs" value="{{club.value}}"> {{club.value}} 
 	    </label>
 
 	    <br/>
 
 	    Dexterity:
-	    <input type="radio" ng-model="dexterity" value="right">Right
-	    <input type="radio" ng-model="dexterity" value="left">Left
+	    <input type="radio" ng-model="model.dexterity" value="right">Right
+	    <input type="radio" ng-model="model.dexterity" value="left">Left
 
     	<br/>
 
@@ -94,16 +94,16 @@
     <section class="itemTotal">
     	<h2>Club Specifications and Cost</h2>
     	<ul>
-    		<li>Shaft Type: {{shaftType}}</li>
-    		<li>Shaft Flex: {{shaftFlex}}</li>
-    		<li>Lie Angle: {{lieAngle}}</li>
-    		<li>Shaft Length: {{shaftLength}}</li>
-    		<li>Grip: {{gripType}}</li>
-    		<li>Grip Size: {{gripSize}}</li>
-    		<li>Clubs: {{clubs}}</li>
-    		<li>Dexterity: {{dexterity}}</li>
+    		<li>Shaft Type: {{model.shaftType}}</li>
+    		<li>Shaft Flex: {{model.shaftFlex}}</li>
+    		<li>Lie Angle: {{model.lieAngle}}</li>
+    		<li>Shaft Length: {{model.shaftLength}}</li>
+    		<li>Grip: {{model.gripType}}</li>
+    		<li>Grip Size: {{model.gripSize}}</li>
+    		<li>Clubs: {{model.clubs}}</li>
+    		<li>Dexterity: {{model.dexterity}}</li>
     	</ul>
-    	Base Club Price
+    	Base Club
     	<br/>
     	Total Options
     	<br/>
