--- a/builds/development/views/help3.html
+++ b/builds/development/views/help3.html
@@ -9,7 +9,7 @@
 
       Select a Grip Type: 
       <select name="gripType" ng-model="model.gripType" ng-required="true" ng-change="updateBackground($element)">
-          <option ng-repeat="attribute in configValues.gripValues" value="{{attribute.value}}" ng-selected="{{attribute.value == gripType}}">{{attribute.value}}</option>
+          <option ng-repeat="attribute in configValues.gripValues" value="{{attribute}}" ng-selected="{{attribute == gripType}}">{{attribute.value}}</option>
       </select>
       
       <p 
