--- a/builds/development/views/helpNav.html
+++ b/builds/development/views/helpNav.html
@@ -1,6 +1,6 @@
 <div>
   <ol>
-	<li ng-class="{ active: isActive('/help') }">Profile Info</li>
+	<li ng-class="{ active: isActive('/fittingGuide') }">Profile Info</li>
     <li ng-class="{ active: isActive('/help/2') }">Shaft Type</li>
     <li ng-class="{ active: isActive('/help/3') }">Grip Type</li>
     <li ng-class="{ active: isActive('/helpReview') }">Review & Purchase</li>
